// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`01 - No default theme. 01 - No options at registration. 01 - No extra themes 1`] = `
<div>
  <div />
</div>
`;

exports[`01 - No default theme. 01 - No options at registration. 01 - No extra themes 2`] = `
<div>
  <div>
    Child
  </div>
</div>
`;

exports[`01 - No default theme. 01 - No options at registration. 02 - Ad hoc theme 1`] = `
<div
  className="theme-a__container___3m8Bb"
>
  <div
    className="theme-a__content___3cON5"
  >
    Child
  </div>
</div>
`;

exports[`01 - No default theme. 01 - No options at registration. 03 - Context theme 1`] = `
<div>
  <div />
</div>
`;

exports[`01 - No default theme. 01 - No options at registration. 03 - Context theme 2`] = `
<div
  className="theme-b__container___2LMSB"
>
  <div />
</div>
`;

exports[`01 - No default theme. 01 - No options at registration. 03 - Context theme 3`] = `
<div
  className="theme-b__container___2LMSB"
>
  <div />
</div>
`;

exports[`01 - No default theme. 01 - No options at registration. 04 - Context + ad hoc 1`] = `
<div>
  <div
    className="theme-c__content___14iRZ"
  />
</div>
`;

exports[`01 - No default theme. 01 - No options at registration. 04 - Context + ad hoc 2`] = `
<div
  className="theme-b__container___2LMSB"
>
  <div
    className="theme-c__content___14iRZ"
  />
</div>
`;

exports[`01 - No default theme. 01 - No options at registration. 04 - Context + ad hoc 3`] = `
<div
  className="theme-a__container___3m8Bb"
>
  <div
    className="theme-a__content___3cON5 theme-c__ad___asr7c theme-c__hoc___2sTdX theme-c__content___14iRZ"
  />
</div>
`;

exports[`01 - No default theme. 01 - No options at registration. 04 - Context + ad hoc 4`] = `
<div
  className="theme-b__container___2LMSB"
>
  <div
    className="theme-c__content___14iRZ"
  />
</div>
`;

exports[`01 - No default theme. 01 - No options at registration. 05 - Context + ad hoc + composition modes 1`] = `
<div
  className="theme-b__container___2LMSB"
>
  <div
    className="theme-a__content___3cON5"
  />
</div>
`;

exports[`01 - No default theme. 01 - No options at registration. 05 - Context + ad hoc + composition modes 2`] = `
<div
  className="theme-b__container___2LMSB"
>
  <div />
</div>
`;

exports[`01 - No default theme. 01 - No options at registration. 05 - Context + ad hoc + composition modes 3`] = `"Invalid composition mode"`;

exports[`02 - With default theme 01 - No options at registration. 01 - No extra themes 1`] = `
<div
  className="theme-a__container___3m8Bb"
>
  <div
    className="theme-a__content___3cON5"
  />
</div>
`;

exports[`02 - With default theme 01 - No options at registration. 01 - No extra themes 2`] = `
<div
  className="theme-a__container___3m8Bb"
>
  <div
    className="theme-a__content___3cON5"
  >
    Child
  </div>
</div>
`;

exports[`02 - With default theme 01 - No options at registration. 02 - Ad hoc theme 1`] = `
<div
  className="theme-a__container___3m8Bb theme-b__ad___WYlQK theme-b__hoc___1PtwN theme-b__container___2LMSB"
>
  <div
    className="theme-a__content___3cON5"
  >
    Child
  </div>
</div>
`;

exports[`02 - With default theme 01 - No options at registration. 03 - Context theme 1`] = `
<div
  className="theme-a__container___3m8Bb"
>
  <div
    className="theme-a__content___3cON5"
  />
</div>
`;

exports[`02 - With default theme 01 - No options at registration. 03 - Context theme 2`] = `
<div
  className="theme-a__container___3m8Bb theme-b__context___2MQ7- theme-b__container___2LMSB"
>
  <div
    className="theme-a__content___3cON5"
  />
</div>
`;

exports[`02 - With default theme 01 - No options at registration. 03 - Context theme 3`] = `
<div
  className="theme-b__container___2LMSB"
>
  <div />
</div>
`;

exports[`02 - With default theme 01 - No options at registration. 04 - Context + ad hoc 1`] = `
<div
  className="theme-a__container___3m8Bb"
>
  <div
    className="theme-a__content___3cON5 theme-c__ad___asr7c theme-c__hoc___2sTdX theme-c__content___14iRZ"
  />
</div>
`;

exports[`02 - With default theme 01 - No options at registration. 04 - Context + ad hoc 2`] = `
<div
  className="theme-a__container___3m8Bb theme-b__context___2MQ7- theme-b__container___2LMSB"
>
  <div
    className="theme-a__content___3cON5 theme-c__ad___asr7c theme-c__hoc___2sTdX theme-c__content___14iRZ"
  />
</div>
`;

exports[`02 - With default theme 01 - No options at registration. 04 - Context + ad hoc 3`] = `
<div
  className="theme-a__container___3m8Bb"
>
  <div
    className="theme-a__content___3cON5 theme-c__context___3d2m3 theme-c__content___14iRZ theme-d__ad___32oBa theme-d__hoc___EaZh5 theme-d__content___pDc1c"
  />
</div>
`;

exports[`02 - With default theme 01 - No options at registration. 05 - Context + ad hoc + composition modes 1`] = `
<div
  className="theme-a__container___3m8Bb"
>
  <div
    className="theme-c__content___14iRZ theme-a__context___2giIe theme-a__content___3cON5 theme-d__ad___32oBa theme-d__hoc___EaZh5 theme-d__content___pDc1c"
  />
</div>
`;

exports[`02 - With default theme 01 - No options at registration. 05 - Context + ad hoc + composition modes 2`] = `
<div
  className="theme-a__container___3m8Bb"
>
  <div
    className="theme-a__content___3cON5 theme-d__ad___32oBa theme-d__hoc___EaZh5 theme-d__content___pDc1c"
  />
</div>
`;

exports[`02 - With default theme 01 - No options at registration. 05 - Context + ad hoc + composition modes 3`] = `
<div>
  <div
    className="theme-c__content___14iRZ theme-d__ad___32oBa theme-d__hoc___EaZh5 theme-d__content___pDc1c"
  />
</div>
`;

exports[`02 - With default theme 01 - No options at registration. 06 - Theme props mapping 1`] = `
<div>
  <div />
</div>
`;

exports[`02 - With default theme 01 - No options at registration. 06 - Theme props mapping 2`] = `
Object {
  "props": Object {
    "mapThemeProps": [Function],
    "ref": null,
  },
  "theme": Object {
    "ad": "theme-a__ad___26pQW",
    "container": "theme-a__container___3m8Bb",
    "content": "theme-a__content___3cON5",
    "context": "theme-a__context___2giIe",
    "hoc": "theme-a__hoc___3XwRf",
  },
}
`;

exports[`02 - With default theme 02 - Options at registration 01 - composeContextTheme 1`] = `
<div
  className="theme-b__container___2LMSB"
>
  <div />
</div>
`;

exports[`02 - With default theme 02 - Options at registration 01 - composeContextTheme 2`] = `
<div
  className="theme-b__container___2LMSB"
>
  <div
    className="theme-a__content___3cON5"
  />
</div>
`;

exports[`02 - With default theme 02 - Options at registration 02 - composeAdhocTheme 1`] = `
<div
  className="theme-b__container___2LMSB"
>
  <div />
</div>
`;

exports[`02 - With default theme 02 - Options at registration 02 - composeAdhocTheme 2`] = `
<div
  className="theme-b__container___2LMSB"
>
  <div
    className="theme-a__content___3cON5"
  />
</div>
`;

exports[`02 - With default theme 02 - Options at registration 03 - themePriority 1`] = `
Array [
  <div
    className="theme-b__container___2LMSB theme-a__context___2giIe theme-a__container___3m8Bb"
  >
    <div
      className="theme-a__content___3cON5 theme-c__ad___asr7c theme-c__hoc___2sTdX theme-c__content___14iRZ"
    />
  </div>,
  <div
    className="theme-a__container___3m8Bb theme-b__context___2MQ7- theme-b__container___2LMSB"
  >
    <div
      className="theme-a__content___3cON5 theme-c__ad___asr7c theme-c__hoc___2sTdX theme-c__content___14iRZ"
    />
  </div>,
]
`;

exports[`02 - With default theme 02 - Options at registration 04 - Theme props mapping 1`] = `
<div>
  <div />
</div>
`;

exports[`02 - With default theme 02 - Options at registration 04 - Theme props mapping 2`] = `
Object {
  "props": Object {
    "ref": null,
  },
  "theme": Object {
    "ad": "theme-a__ad___26pQW",
    "container": "theme-a__container___3m8Bb",
    "content": "theme-a__content___3cON5",
    "context": "theme-a__context___2giIe",
    "hoc": "theme-a__hoc___3XwRf",
  },
}
`;

exports[`02 - With default theme 02 - Options at registration 04 - Theme props mapping 3`] = `
<div
  className="theme-a__container___3m8Bb"
>
  <div
    className="theme-a__content___3cON5"
  />
</div>
`;

exports[`02 - With default theme 02 - Options at registration 04 - Theme props mapping 4`] = `
Object {
  "props": Object {
    "mapThemeProps": [Function],
    "ref": null,
  },
  "theme": Object {
    "ad": "theme-a__ad___26pQW",
    "container": "theme-a__container___3m8Bb",
    "content": "theme-a__content___3cON5",
    "context": "theme-a__context___2giIe",
    "hoc": "theme-a__hoc___3XwRf",
  },
}
`;

exports[`02 - With default theme 02 - Options at registration 05 - Specifity tags 1`] = `
<div
  className="theme-a__container___3m8Bb  theme-b__container___2LMSB"
>
  <div
    className="theme-a__content___3cON5  theme-c__hoc___2sTdX theme-c__content___14iRZ"
  />
</div>
`;

exports[`02 - With default theme 02 - Options at registration 05 - Specifity tags 2`] = `"Invalid adhoc theme tag"`;
